update for qq share

--- a/app/views/shared/_data.html.erb
+++ b/app/views/shared/_data.html.erb
@@ -8,6 +8,16 @@
 </div>
 
 <script type="text/javascript">
+
+    var get_wanhuir_share_info = function(){
+        wanhuir_page_title = $("#wanhuir_page_title").val();
+        wanhuir_page_url = $("#wanhuir_page_url").val();
+        wanhuir_page_result = $("#wanhuir_page_result").val();
+        wanhuir_page_desc = $("#wanhuir_page_desc").val();
+        wanhuir_page_image = $("#wanhuir_page_image").val();
+        wanhuir_material_id = $("#wanhuir_material_id").val();
+    }
+
     var get_wanhuir_share_info_for_app = function(){
         var result;
 
