--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,8 +45,8 @@
             </div>
             <ul class="wpinstagram wpinstagram-slideshow live" style="width: 100%;">
               <li style="width:100%; margin-bottom: 5px !important;">
-                <%= link_to "http://www.wanhuir.com/materials/111?fr=banner" do %>
-                  <%= image_tag "http://1251008728.cdn.myqcloud.com/1251008728/flappy/flappy.png", style:"width:100%; margin-bottom:5px;" %>
+                <%= link_to "http://www.wanhuir.com/materials/227?fr=banner" do %>
+                  <%= image_tag "http://1251008728.cdn.myqcloud.com/1251008728/hello/h1.jpg", style:"width:100%; margin-bottom:5px;" %>
                 <% end %>
               </li>
             </ul>
