--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,12 +40,12 @@
           <div class="widgetblock"> 
             <div class="widgettitleb"> 
               <h3 class="widgettitle">
-                最火爆的flappy bird重生，Flappy Tube大挑战！
+                最火爆的小三传奇，2048大挑战！
               </h3> 
             </div>
             <ul class="wpinstagram wpinstagram-slideshow live" style="width: 100%;">
               <li style="width:100%; margin-bottom: 5px !important;">
-                <%= link_to "http://www.wanhuir.com/materials/227?fr=banner" do %>
+                <%= link_to "http://www.wanhuir.com/materials/227?text=gg&fr=banner" do %>
                   <%= image_tag "http://1251008728.cdn.myqcloud.com/1251008728/hello/h1.jpg", style:"width:100%; margin-bottom:5px;" %>
                 <% end %>
               </li>
