--- a/app/views/materials/show_ncache.html.erb
+++ b/app/views/materials/show_ncache.html.erb
@@ -28,6 +28,7 @@
         <%= ERB.new(@category.css).result(binding).html_safe %>
       </style>
     </head>
+     <%= render "shared/ad" %>
     <% @prompt_image = @material.images.select{|i| i.state == 3 }[0].try(:body) %>
     <% @commit_btn   = @material.images.select{|i| i.state == 9 }[0].try(:body) %>
     <% @close_btn    = @material.images.select{|i| i.state == 16}[0].try(:body) %>
@@ -35,7 +36,5 @@
     <% @html_image_2 = @material.images.select{|i| i.state == 13}[0].try(:body) %>
     <% @html_image_3 = @material.images.select{|i| i.state == 14}[0].try(:body) %>
     <%= ERB.new(@category.html).result(binding).html_safe %>
-    <div style="display: none;">
-      <script src="http://s5.cnzz.com/stat.php?id=2814783&web_id=2814783" language="JavaScript"></script>
-    </div>
+    <%= render "shared/analysis" %>
 </html>
