--- a/app/views/shared/_ad.html.erb
+++ b/app/views/shared/_ad.html.erb
@@ -1,5 +1,5 @@
 <div class="flexslider"   style="margin:0px auto;text-align:center; margin-top:5px;" >
-  <ul class="slides" style="list-style:none;">
+  <ul class="slides" style="list-style:none; min-height:15px;">
     <script>
       function click_ad(idx){
         var url="/admin/click_stat?id=" + idx;
