--- a/app/views/shared/_ad.html.erb
+++ b/app/views/shared/_ad.html.erb
@@ -12,7 +12,7 @@
     <% @ads = Ad.where(:on => true) %>
     <% @ads.each do |ad|%>
     <li style="float:left; margin-left:8px;">
-      <a onclick="click_ad(<%= ad.id %>);" href="<%= ad.click %>" > <img height="30" src="<%= ad.img %>" /> </a>
+      <a onclick="click_ad(<%= ad.id %>);" href="<%= ad.click %>" > <img style="height:6%; max-height:50px;" src="<%= ad.img %>" /> </a>
       <script>
         var url="/admin/show_stat?id=<%= ad.id %>"
         var img = new Image();
