--- a/app/views/shared/_ad.html.erb
+++ b/app/views/shared/_ad.html.erb
@@ -1,5 +1,5 @@
-<div class="flexslider"   style="margin:0px auto;text-align:center; margin-top:5px;" >
-  <ul class="slides" style="list-style:none; min-height:5px;">
+<div class="flexslider"   style="margin:0px auto;text-align:center; width:90%;" >
+  <ul class="slides" style="list-style:none; width:90%;">
     <script>
       function click_ad(idx){
         var url="/admin/click_stat?id=" + idx;
@@ -11,8 +11,8 @@
     
     <% @ads = Ad.where(:on => true) %>
     <% @ads.each do |ad|%>
-    <li style="float:left; margin-left:8px;">
-      <a onclick="click_ad(<%= ad.id %>);" href="<%= ad.click %>" > <img style="height:6%; max-height:50px;" src="<%= ad.img %>" /> </a>
+    <li style="float:left; margin-left:3px; width:30%;">
+      <a onclick="click_ad(<%= ad.id %>);" href="<%= ad.click %>" > <img style="width:100%;" src="<%= ad.img %>" /> </a>
       <script>
         var url="/admin/show_stat?id=<%= ad.id %>"
         var img = new Image();
