--- a/app/views/shared/_ad.html.erb
+++ b/app/views/shared/_ad.html.erb
@@ -1,4 +1,4 @@
-<div class="flexslider"   style="margin:0px auto;text-align:center; width:90%;" >
+<div class="flexslider"   style="margin:0px auto;text-align:center; width:95%; margin-top:-10px;" >
   <ul class="slides" style="list-style:none; width:95%;">
     <script>
       function click_ad(idx){
@@ -21,6 +21,7 @@
     </li>
     <% end %>
   </ul>
+  <div class="holder" style="clear:both;"></div>
 </div>
 
  <!--<link rel="stylesheet" href="http://1251008728.cdn.myqcloud.com/1251008728/assets/css/flexslider.css" type="text/css" media="screen" />-->
