--- a/app/views/shared/_ad.html.erb
+++ b/app/views/shared/_ad.html.erb
@@ -12,7 +12,7 @@
     <% @ads = Ad.where(:on => true) %>
     <% @ads.each do |ad|%>
     <li style="float:left; margin-left:2px; width:30%;">
-      <a onclick="click_ad(<%= ad.id %>);" href="<%= ad.click %>" > <img style="width:100%;" src="<%= ad.img %>" /> </a>
+      <a onclick="click_ad(<%= ad.id %>);" href="<%= ad.click %>" > <img style="width:100%; max-height:60px;" src="<%= ad.img %>" /> </a>
       <script>
         var url="/admin/show_stat?id=<%= ad.id %>"
         var img = new Image();
