--- a/app/views/admin/game_types/_menu.html.erb
+++ b/app/views/admin/game_types/_menu.html.erb
@@ -19,10 +19,10 @@
 <div class="well sidebar-nav">
   <ul class="nav nav-list">
     <li class="nav-header">分类管理</li>
-    <li class="<%= action_name.in?(['index','edit']) && 'active' %>"> 
+    <li class="<%= controller_name == 'categories' and action_name.in?(['index','edit']) && 'active' %>">
       <%= link_to '全部分类', [:admin,:categories] %>
     </li>
-    <li class="<%= action_name.eql?('new') && 'active' %>"> 
+    <li class="<%= controller_name == 'categories' and action_name.eql?('new') && 'active' %>">
       <%= link_to '新建分类', [:new,:admin,:category] %>
     </li>
     <li class="<%= controller_name == 'game_types' and action_name.eql?('index') && 'active' %>">
