--- a/app/views/admin/materials/index.html.erb
+++ b/app/views/admin/materials/index.html.erb
@@ -23,7 +23,7 @@
           <% end %>
         </td>
         <td><%= c.pv %></td>
-        <td><%= c.wx_url %></td>
+        <td><%= c.wx_url.gsub("http://wanhuir.com/materials/", "").gsub("http://www.wanhuir.com/materials/", "") unless c.wx_url.blank? %></td>
         <td> 
           <%= link_to [:update_state,:admin,c], remote: true, class: 'ajax',  
             data: {confirm: 'are you sure?'} do %>
