--- a/app/views/admin/materials/index.html.erb
+++ b/app/views/admin/materials/index.html.erb
@@ -2,7 +2,7 @@
   <thead>
     <tr class="well">
       <th>序号</th>
-      <th>名称</th>
+      <th width="5%">名称</th>
       <th>人气</th>
       <th>微信链接</th>
       <th width="5%">状态</th>
