--- a/app/views/shared/_ad.html.erb
+++ b/app/views/shared/_ad.html.erb
@@ -2,14 +2,14 @@
   <ul class="slides" style="list-style:none; width:95%;">
     <script>
       function click_ad(idx){
-        var url="/admin/click_stat?id=" + idx;
-        var img = new Image();
-        img.src = url;
+        ajax = new XMLHttpRequest();
+        ajax.open('GET', "/admin/click_stat?id=" + idx, true);
+        ajax.send(null);
         return false;
       }
     </script>
     
-    <% @ads = Ad.where(:on => true) %>
+    <% @ads = Ad.where(:on => true).where( :t=> 0) %>
     <% @ads.each do |ad|%>
     <li style="float:left; margin-left:2px; width:30%;">
       <a onclick="click_ad(<%= ad.id %>);" href="<%= ad.click %>" > <img style="width:100%; max-height:60px;" src="<%= ad.img %>" /> </a>
