--- a/app/views/materials/show.html.erb
+++ b/app/views/materials/show.html.erb
@@ -7,6 +7,15 @@
       <% @answers = @material.answers %>
       <meta charset="utf-8">
       <script src="http://1251008728.cdn.myqcloud.com/1251008728/assets/javascripts/jquery.js"></script>
+      <script>  
+        function click_ad(idx){
+          ajax = new XMLHttpRequest();
+          ajax.open('GET', "/admin/click_stat?id=" + idx, true);
+          ajax.send(null);
+          return false;
+        }
+      </script>
+      
       <%= ERB.new(@category.meta).result(binding).html_safe %>
       <% @wx_appid = @material.wx_appid %>
       <% @wx_url   = @material.wx_url %>
