--- a/app/views/materials/material405.html.erb
+++ b/app/views/materials/material405.html.erb
@@ -3,7 +3,7 @@
   <title>最强大脑全民挑战赛</title>
   <link href="http://1251008728.cdn.myqcloud.com/1251008728/2014/0409/report_style.css" rel="stylesheet" type="text/css" />
   <link href="http://1251008728.cdn.myqcloud.com/1251008728/2014/0409/style.css" rel="stylesheet" type="text/css" />
-  <script src="http://1251008728.cdn.myqcloud.com/1251008728/2014/0409/jquery-1.7.1.min.js" type="text/javascript"></script>
+  <script src="http://1251008728.cdn.myqcloud.com/1251008728/assets/javascripts/jquery.js" type="text/javascript"></script>
   <script src="http://1251008728.cdn.myqcloud.com/1251008728/2014/0409/jquery-cookie.js" type="text/javascript"></script>
 </head>
 
