--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -238,10 +238,10 @@ img.avatar {float:left; margin-right:5px;padding: 0 0.5em 0 0;}
 #content .alignleft,#content img.alignleft{display:inline;float:left;margin-right:24px;margin-top:4px;}
 #content .alignright,#content img.alignright{display:inline;float:right;margin-left:24px;margin-top:4px;}
 #content .aligncenter,#content img.aligncenter{clear:both;display:block;margin-left:auto;margin-right:auto;margin-top:4px;}
-#content img,img.alignleft,#content img.alignright,#content img.aligncenter{margin-bottom:12px;max-width: 100%;height: auto; }
+img.alignleft,#content img.alignright,#content img.aligncenter{margin-bottom:12px;max-width: 100%;height: auto; }
 #content .attachment img {display: block;margin: 0 auto;max-width: 100%;height: auto; }
 iframe, object, embed{max-width: 100%;}
-
+#content img{max-width: 100%;height: auto;}
 
 /*form box*/
 #formbox label{font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;color:#444;display:block;font-weight:400;font-size:1.3em;margin-bottom:6px;}
