--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,7 +24,7 @@
   </div>
   <% if @materials.size < @materials.total_count %>
     <div style="background: #444;">
-      <%= link_to  materials_url(page: 2), remote: true, id: "load_materials" do %>
+      <%= link_to materials_url(page: 2, order: params[:order], game_type_id: params[:game_type_id]), remote: true, id: "load_materials" do %>
         <div style="margin: 0 auto 0 auto; width:124px; padding:15px; text-align:center; color:white;">
           点击加载更多游戏
         </div>
