--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,8 @@
 <div class="clear"></div>
 
+<a  key ="5347bc37efbfb0598d40eb3a"  logo_size="124x47"  logo_type="business"  href="http://www.anquan.org" ><script src="http://static.anquan.org/static/outer/js/aq_auth.js"></script></a>
+
+
 <div class="credits container_15 entry-content-footer"> 
   Shuwei Inc. 2013 All Rights Reserved. 沪ICP备09039856号-2
 </div> 
