--- a/app/views/custom/shared/_nav.html.erb
+++ b/app/views/custom/shared/_nav.html.erb
@@ -5,14 +5,14 @@
       <div class="nav-collapse collapse">
         <ul class="nav navbar-nav pull-right">
           <li><a href="#"><%= current_user.name %></a></li>
-          <li><%= link_to '退出', admin_session_path(current_user), method: :delete %></li>
+          <li><%= link_to '退出', custom_session_path(current_user), method: :delete %></li>
         </ul>
         <ul class="nav">
-          <li class="<%= controller_name.in?(['materials']) ? 'active' : '' %>"> 
-            <%= link_to '游戏管理', [:custom,:materials] %>
-          </li>
+          <!--<li class="<%= controller_name.in?(['materials']) ? 'active' : '' %>"> -->
+            <!--<%= link_to '游戏管理', [:custom,:materials] %>-->
+          <!--</li>-->
           <li class="<%= controller_name.in?(['ads']) ? 'active' : ''%>">
-            <%= link_to '广告管理', [:admin,:ads] %>
+            <%= link_to '广告管理', [:custom,:ads] %>
           </li>
         </ul>
       </div><!--/.nav-collapse -->
