--- a/app/views/shared/_analysis.html.erb
+++ b/app/views/shared/_analysis.html.erb
@@ -1,5 +1,7 @@
 <div style="display: none;">                                                   
-   <script src="http://s5.cnzz.com/stat.php?id=2814783&web_id=2814783" language="JavaScript"></script>
+  <a  key ="5347bc37efbfb0598d40eb3a"  logo_size="124x47"  logo_type="business"  href="http://www.anquan.org" ><script src="http://static.anquan.org/static/outer/js/aq_auth.js"></script></a>
+
+  <script src="http://s5.cnzz.com/stat.php?id=2814783&web_id=2814783" language="JavaScript"></script>
   <!--
    <script type="text/javascript">
      var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
