--- a/app/views/shared/_data.html.erb
+++ b/app/views/shared/_data.html.erb
@@ -1,6 +1,6 @@
 <div id="shangjieba_share">
   <input type="hidden" name="wanhuir_page_title" id="wanhuir_page_title" value="<%= @material.blank? ? "玩会儿 精彩小游戏" : @material.wx_title %>"/>
-  <input type="hidden" name="wanhuir_page_url" id="wanhuir_page_url" value="<%= @material.blank? ? "http://www.wanhuir.com" : @material.wx_url %>"/>
+  <input type="hidden" name="wanhuir_page_url" id="wanhuir_page_url" value="<%= @material.blank? ? "http://leapcliff.com" : @material.wx_url %>"/>
   <input type="hidden" name="wanhuir_page_result" id="wanhuir_page_result" value=""/>
   <input type="hidden" name="wanhuir_page_desc" id="wanhuir_page_desc" value="<%= @material.blank? ? "还有更多精彩内容" : @material.wxdesc %>"/>
   <input type="hidden" name="wanhuir_page_image" id="wanhuir_page_image" value="<%= @material.blank? ? "http://wxcover.qiniudn.com/shijian.png" : @material.wx_tlimg %>"/>
