--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -65,7 +65,7 @@ div#header{margin:0px 0 0 0;background:transparent}
 #wrapperheader{max-width: 1280px;margin:0 auto; padding:0 0 0 0; position:relative; text-align:left;}
 #wrapper{max-width: 1280px;margin: 0 auto;position:relative; text-align:left;-moz-border-radius-bottomleft:6px;border-bottom-left-radius:6px;-moz-border-radius-bottomright:6px;border-bottom-right-radius:6px;}
 #wrappertop{margin:0 auto; padding:0 0 0 0; position:relative; text-align:left}
-#container{margin: 10px 0}
+#container{margin: 0 0}
 #containerlarge{margin:0.8em 0 2em 2em; display:inline; clear:both;background-color:#fff;}
 * html #containerlarge{margin:2em 0 2em 2em; background-color:#fff;}
 #content{background-color:transparent; padding: 10px 0;overflow:hidden;}
@@ -341,6 +341,12 @@ dd{margin-bottom:18px}
 	position: relative;
 	margin-left: 1%;
 	margin-right: 1%;
+        
+}
+
+.grid_4{
+    margin-left:0.6em;
+    margin-right:0.6em;
 }
 
 
@@ -1148,7 +1154,7 @@ PERSONNALISATION
 
 .alpha1{
     background: #ffffff;
-    margin-bottom: 2em;
+    margin-bottom: 1em;
 }
 
 .show-count{
