--- a/app/views/materials/show.html.erb
+++ b/app/views/materials/show.html.erb
@@ -4,6 +4,8 @@
       <link href="http://1251008728.cdn.myqcloud.com/1251008728/assets/images/wanhuir-icon.png" rel="shortcut icon" type="image/vnd.microsoft.icon">
       <% @category = @material.category %>
       <title><%= @material.name %></title>
+      <meta name="keywords" content="玩会儿,微信测试,微信游戏,微测试,微游戏,小游戏,转盘">
+      <meta name="description" content="<%= @material.description %>" >
       <% @answers = @material.answers %>
       <meta charset="utf-8">
       <script src="http://1251008728.cdn.myqcloud.com/1251008728/assets/javascripts/jquery.js"></script>
@@ -48,7 +50,10 @@
     <% @html_image_2 = @material.images.select{|i| i.state == 13}[0].try(:body) %>
     <% @html_image_3 = @material.images.select{|i| i.state == 14}[0].try(:body) %>
     <%= ERB.new(@category.html).result(binding).html_safe %>
-    
+    <div id='desc'>
+    <%= @material.description  %>
+    </div>
+    </br> 
     <% unless params[:fr] %>
       <%= render "shared/ad_bottom" %>
     <% end %> 
