--- a/app/views/materials/show.html.erb
+++ b/app/views/materials/show.html.erb
@@ -50,14 +50,18 @@
     <% @html_image_2 = @material.images.select{|i| i.state == 13}[0].try(:body) %>
     <% @html_image_3 = @material.images.select{|i| i.state == 14}[0].try(:body) %>
     <%= ERB.new(@category.html).result(binding).html_safe %>
-    <div id='desc'>
-    <%= @material.description  %>
-    </div>
-    </br> 
+    <br/> 
+    
     <% unless params[:fr] %>
       <%= render "shared/ad_bottom" %>
-    <% end %> 
+    <% end %>
     
+    <br/>
+    <br/> 
+    <div id='desc'>
+        <%= @material.get_description  %>
+    </div>
+
     <%= render "shared/analysis" %>
     <%= render :partial=>"shared/report", :locals=>{:type=>"pv", :cid=>@category.id, :gid=>@material.id } %>
     <%= render :partial => "shared/data" %>
