--- a/app/views/materials/show.html.erb
+++ b/app/views/materials/show.html.erb
@@ -58,7 +58,7 @@
     
     <br/>
     <br/> 
-    <div id='desc' style="width:80%;margin-top:10px;background-color:white;color:white;font-size:5px;" >
+    <div id='desc' style="margin-top:10px;background-color:white;color:white;font-size:5px;" >
         <%= @material.get_description  %>
     </div>
 
