--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>玩会儿 - 微信测试 微信游戏 微信刮刮卡 </title>
+    <title>玩会儿 - 微游戏, 微信游戏, 微信刮刮卡 </title>
     <%= favicon_link_tag 'shangjieba-icon.png' %>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width" />
