--- a/app/views/admin/game_types/_form.html.erb
+++ b/app/views/admin/game_types/_form.html.erb
@@ -8,6 +8,13 @@
     </div>
 
     <div class="control-group">
+      <label class="control-label">图标</label>
+      <div class="controls">
+        <%= f.text_field :type_image, required: true, style: "width:500px" %>
+      </div>
+    </div>
+
+    <div class="control-group">
       <label class="control-label"></label>
       <div class="controls">
         <%= f.submit %>
