--- a/app/views/admin/shared/_nav.html.erb
+++ b/app/views/admin/shared/_nav.html.erb
@@ -20,6 +20,9 @@
           <li class="<%= controller_name.in?(['ads']) ? 'active' : ''%>">
             <%= link_to '广告管理', [:admin,:ads] %>
           </li>
+          <li class="<%= controller_name.in?(['banners']) ? 'active' : ''%>">
+            <%= link_to 'App Banner管理', [:admin,:banners] %>
+          </li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
