update for api document

--- a/app/views/api/welcome/document.html.erb
+++ b/app/views/api/welcome/document.html.erb
@@ -2,7 +2,6 @@
 <html>
 <head>
   <meta charset="UTF-8">
-
   <link rel="stylesheet" type="text/css" href="http://1251008728.cdn.myqcloud.com/1251008728/assets/css/github.css"/>
   <script type="text/javascript" src="http://1251008728.cdn.myqcloud.com/1251008728/assets/javascripts/highlight.pack.js"></script>
   <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
@@ -71,7 +70,11 @@
     <div>
       <pre>
         <code>
-          {"materials":[
+          {
+            "total_page":16,
+            "page":1,
+            "more_page":15,
+            "materials":[
             {"id":455,"title":"11111111222","wx_url":"","wx_tlimg":"111111112222"},
             {"id":453,"title":"11111111","wx_url":"","wx_tlimg":"11111111"},
             {"id":445,"title":"五道IQ测试题，看你是不是天才","wx_url":"http://203.195.191.203/materials/445","wx_tlimg":"http://1251008728.cdn.myqcloud.com/1251008728/tiancai/1.jpg"},
