--- a/app/views/admin/banners/_form.html.erb
+++ b/app/views/admin/banners/_form.html.erb
@@ -8,6 +8,13 @@
     </div>
 
     <div class="control-group">
+      <label class="control-label">链接地址</label>
+      <div class="controls">
+        <%= f.text_field :link, required: true, style: "width:500px" %>
+      </div>
+    </div>
+
+    <div class="control-group">
       <label class="control-label">Wait</label>
       <div class="controls">
         <%= f.text_field :wait, required: true %>
