--- a/app/views/shared/_ad_bottom.html.erb
+++ b/app/views/shared/_ad_bottom.html.erb
@@ -1,10 +1,12 @@
-<div style="margin-top:5px;" align="center" id="bai">
+<div style=" background:#fff;  " align="center" id="bai">
   <div style="display: inline;float: left;">
     <% @ads = Ad.where(:on => true).where( :t=> 2 ) %>
     <% @ads.each do |ad| %>
         <%= ad.code.html_safe %>
     <% end %>
   </div>
+</div>
+<div style="clear:both; ">
 </div>
 
 
