update for game type

--- a/app/views/api/welcome/document.html.erb
+++ b/app/views/api/welcome/document.html.erb
@@ -36,6 +36,16 @@
     <div>
       <pre>
         <code>
+          参数
+          all=1 所有分类
+          无参数 特色分类(带图片 展示在首页的分类)
+        </code>
+      </pre>
+    </div>
+
+    <div>
+      <pre>
+        <code>
           {"game_types":[
             {"id":1,"game_type":"智商测试","type_image":"3232"},
             {"id":2,"game_type":"轮盘测试","type_image":""},
