--- a/app/views/materials/return.html.erb
+++ b/app/views/materials/return.html.erb
@@ -25,6 +25,7 @@
       <%= ERB.new(@category.re_css).result(binding).html_safe %>
     </style>
   </head>
+  <%= render "shared/data" %>
   <%= render "shared/ad" %>
   <%= ERB.new(@category.re_html).result(binding).html_safe %>
   <%= render "shared/analysis" %>
