update for document

--- a/app/views/api/welcome/document.html.erb
+++ b/app/views/api/welcome/document.html.erb
@@ -64,7 +64,7 @@
 
   <li>
     <div>
-    GET  /api/welcome/index?page=1&per_page=12&order=hot (游戏列表)
+    GET  /api/welcome/index?page=1&per_page=12&order=hot&game_type_id=1 (游戏列表)
     </div>
 
     <div>
@@ -73,6 +73,7 @@
         page: 页数
         per_page: 每页多少 可不传 默认12
         order: 排序 hot, recommend
+        game_type_id: 分类
       </code>
     </pre>
     </div>
