--- a/app/views/admin/game_types/_form.html.erb
+++ b/app/views/admin/game_types/_form.html.erb
@@ -10,7 +10,7 @@
     <div class="control-group">
       <label class="control-label">图标</label>
       <div class="controls">
-        <%= f.text_field :type_image, required: true, style: "width:500px" %>
+        <%= f.text_field :type_image, style: "width:500px" %>
       </div>
     </div>
 
